--- a/index.html
+++ b/index.html
@@ -14,49 +14,44 @@
 					<div class="top-nav__body">
 						<div class="nav-test">
 							<div class="nav-test__container">
-								<div class="nav-test__body">
-									<div class="nav-test__items">
-										<div class="nav-test__content">
-											<div class="nav-test__header titles">
-												<div class="nav-titles__label">logoipsom</div>
-											</div>
+								<div class="nav-test__items">
+									<div class="nav-test__content">
+										<div class="nav-test__header titles">
+											<div class="nav-titles__label">logoipsom</div>
 										</div>
-										<div class="nav-test-item__clock">
-											<div class="nav-item-test__clock">
-												<div class="nav-item__icon-name">
-													<!-- <img src="img/icon/access_time_24px.svg" class="hours__icon" alt="Иконка"> -->
-													<div class="nav-item__name nav-item-title">BOARDING HOURS <br> Mon - Sat: 7:00 am - 6:00 pm</div>
-												</div>
-											</div>
-										</div>
-										<div class="nav-test-item__tel">
-											<div class="nav-item-test__tel">
-												<div class="nav-item__icon-name">
-													<!-- <img src="img/icon/phone_24px.svg" class="phone__icon" alt="Иконка"> -->
-													<div class="nav-item__name nav-item-title">CALL US <br>(555) Pup-Cares</div>
-												</div>
-											</div>
-										</div>
-										<a class="top-nav__button" href="#">Make an appointment</a>
 									</div>
+									<div class="nav-test-item__clock">
+										<div class="nav-item-test__clock">
+											<div class="nav-item__icon-name">
+												<div class="nav-item__name nav-item-title">BOARDING HOURS <br> Mon - Sat: 7:00 am - 6:00 pm</div>
+											</div>
+										</div>
+									</div>
+									<div class="nav-test-item__tel">
+										<div class="nav-item-test__tel">
+											<div class="nav-item__icon-name">
+												<div class="nav-item__name nav-item-title">CALL US <br>(555) Pup-Cares</div>
+											</div>
+										</div>
+									</div>
+									<a class="top-nav__button" href="#">Make an appointment</a>
 								</div>
 							</div>
 						</div>
 						<div class="top-nav__navigation navigation">
 							<nav class="navigation__item-link">
-								<div class="navigation__item"><a href="#" class="navigation__link"></a>Services</div>
-								<div class="navigation__item"><a href="#" class="navigation__link"></a>Specials</div>
-								<div class="navigation__item"><a href="#" class="navigation__link"></a>Facilities</div>
-								<div class="navigation__item"><a href="#" class="navigation__link"></a>Reviews</div>
-								<div class="navigation__item"><a href="#" class="navigation__link"></a>Shop</div>
-								<div class="navigation__item"><a href="#" class="navigation__link"></a>About</div>
+								<div class="navigation__item"><a href="#" class="navigation__link">Services</a></div>
+								<div class="navigation__item"><a href="#" class="navigation__link">Specials</a></div>
+								<div class="navigation__item"><a href="#" class="navigation__link">Facilities</a></div>
+								<div class="navigation__item"><a href="#" class="navigation__link">Reviews</a></div>
+								<div class="navigation__item"><a href="#" class="navigation__link">Shop</a></div>
+								<div class="navigation__item"><a href="#" class="navigation__link">About</a></div>
 							</nav>
-							<div class="top-nav__border"></div>
 							<div class="top-nav__icon">
-								<div class="top-nav__search"></div>
-								<div class="top-nav__shoping">
-									<img src="img/ellipse_1.svg" class="top-nav__ellipse" alt="">
-								</div>
+								<span class="top-nav__search"></span>
+								<span class="top-nav__shoping">
+									<div class="top-nav__ellipse">2</div>
+								</span>
 							</div>
 						</div>
 					</div>
@@ -221,47 +216,47 @@
 						</div>
 					</div>
 				</div>
-				<div class="inpact">
-					<div class="inpact__container">
-						<div class="inpact__body">
-							<div class="inpact__content">
-								<div class="inpact__header titles">
+				<div class="stats">
+					<div class="stats__container">
+						<div class="stats__body">
+							<div class="stats__content">
+								<div class="stats__header titles">
 									<div class="titles__label titles__label_white">OUR IMPACT</div>
 									<h2 class="titles__item titles__item_white">Nemo enim ipsam voluptatem quia voluptas</h2>
 								</div>
 							</div>
-							<div class="inpact__image">
-								<img src="img/inpact/Image.webp" alt="">
+							<div class="stats__image">
+								<img src="img/stats/Image.webp" alt="Dog-image">
 							</div>
 						</div>
 
-						<div class="inpact__items">
-							<div class="inpact__item item-inpact">
-								<img src="img/inpact/01.svg" class="item-inpact__icon" alt="">
-								<div class="item-inpact__body">
-									<div class="item-inpact__value">3,700</div>
-									<div class="item-inpact__text">puppy baths</div>
+						<div class="stats__items">
+							<div class="stats__item item-stats">
+								<img src="img/stats/01.svg" class="item-stats__icon" alt="">
+								<div class="item-stats__body">
+									<div class="item-stats__value">3,700</div>
+									<div class="item-stats__text">puppy baths</div>
 								</div>
 							</div>
-							<div class="inpact__item item-inpact">
-								<img src="img/inpact/02.svg" class="item-inpact__icon" alt="">
-								<div class="item-inpact__body">
-									<div class="item-inpact__value">4,500</div>
-									<div class="item-inpact__text">dogs boarded</div>
+							<div class="stats__item item-stats">
+								<img src="img/stats/02.svg" class="item-stats__icon" alt="">
+								<div class="item-stats__body">
+									<div class="item-stats__value">4,500</div>
+									<div class="item-stats__text">dogs boarded</div>
 								</div>
 							</div>
-							<div class="inpact__item item-inpact">
-								<img src="img/inpact/03.svg" class="item-inpact__icon" alt="">
-								<div class="item-inpact__body">
-									<div class="item-inpact__value">2,900</div>
-									<div class="item-inpact__text">pups trained</div>
+							<div class="stats__item item-stats">
+								<img src="img/stats/03.svg" class="item-stats__icon" alt="">
+								<div class="item-stats__body">
+									<div class="item-stats__value">2,900</div>
+									<div class="item-stats__text">pups trained</div>
 								</div>
 							</div>
-							<div class="inpact__item item-inpact">
-								<img src="img/inpact/04.svg" class="item-inpact__icon" alt="">
-								<div class="item-inpact__body">
-									<div class="item-inpact__value">12k+</div>
-									<div class="item-inpact__text">meals served</div>
+							<div class="stats__item item-stats">
+								<img src="img/stats/04.svg" class="item-stats__icon" alt="">
+								<div class="item-stats__body">
+									<div class="item-stats__value">12k+</div>
+									<div class="item-stats__text">meals served</div>
 								</div>
 							</div>
 						</div>
