--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 								</div>
 							</div>
 							<div class="stats__image">
-								<img src="img/stats/image.webp" alt="Dog-image">
+								<img src="img/inpact/Image.webp" alt="Dog-image">
 							</div>
 						</div>
 
