--- a/index.html
+++ b/index.html
@@ -56,14 +56,28 @@
 						</div>
 					</div>
 				</div>
-				<div class="hero__container">
+				<!-- <div class="hero__container">
 					<div class="hero__content">
 						<h1 class="hero__title">Premier dog boarding, <br> daycare & day spa</h1>
 						<a class="hero__button button" href="#">Make an appointment</a>
 					</div>
-				</div>
+				</div> -->
 			</header>
 			<main class="main">
+				<!-- <div class="hero__container">
+					<div class="hero__content">
+						<h1 class="hero__title">Premier dog boarding, <br> daycare & day spa</h1>
+						<a class="hero__button button" href="#">Make an appointment</a>
+					</div>
+				</div> -->
+				<div class="hero hero_margin">
+					<div class="hero__container">
+						<div class="hero__box">
+							<h1 class="hero__title">Premier dog boarding, daycare & day spa</h1>
+							<a href="#" class="premier-dog__button button">Make an Appointment</a>
+						</div>
+					</div>
+				</div>
 				<div class="about">
 					<div class="about__container">
 						<div class="about__body">
@@ -226,7 +240,7 @@
 								</div>
 							</div>
 							<div class="stats__image">
-								<img src="img/inpact/Image.webp" alt="Dog-image">
+								<img src="img/stats/image.webp" alt="Dog-image">
 							</div>
 						</div>
 
